[gd_scene load_steps=11 format=2]

[ext_resource path="res://BabaGodotLib/Fonts/BoldCapsPixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://BabaGodotLib/UI/Menu/MenuOptionBase.tscn" type="PackedScene" id=2]
[ext_resource path="res://BabaGodotLib/UI/Menu/MenuBase.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Menus/SaveLoadMenus/SaveConfirmMenu/SaveConfirm.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Menus/SaveLoadMenus/SaveConfirmMenu/SaveNameField.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 1 )

[node name="SaveConfirm" instance=ExtResource( 3 )]
margin_left = 4.20448
margin_top = 1.68179
margin_right = 4.20447
margin_bottom = 1.68176
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="." index="0"]
modulate = Color( 0, 0, 0, 0.588235 )
margin_left = -4.89632
margin_right = 959.104
margin_bottom = 540.0
color = Color( 0.941176, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ColorRect2" type="ColorRect" parent="ColorRect" index="0"]
modulate = Color( 0, 0, 0, 0.6 )
anchor_left = 0.0011692
anchor_right = 0.0011692
margin_left = 81.8776
margin_top = 38.0
margin_right = 881.878
margin_bottom = 432.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HBoxContainer" parent="." index="1"]
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = -92.0
margin_right = 0.0
margin_bottom = 0.0

[node name="V_OptContainer" parent="HBoxContainer" index="0"]
margin_left = 366.0
margin_right = 594.0
margin_bottom = 92.0

[node name="Cancel" parent="HBoxContainer/V_OptContainer" index="0" instance=ExtResource( 2 )]
margin_right = 228.0
text = "Cancel"

[node name="Confirm Save" parent="HBoxContainer/V_OptContainer" index="1" instance=ExtResource( 2 )]
margin_top = 48.0
margin_right = 228.0
margin_bottom = 92.0
text = "Confirm and Save"

[node name="SaveInformations" type="HBoxContainer" parent="." index="2"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 80.0
margin_top = -100.298
margin_right = -80.0
margin_bottom = -35.2984
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="CurrentSave" type="VBoxContainer" parent="SaveInformations" index="0"]
margin_right = 457.0
margin_bottom = 64.0
size_flags_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SaveInformations/CurrentSave" index="0"]
margin_right = 457.0
margin_bottom = 29.0
size_flags_horizontal = 3

[node name="c_savename" type="Label" parent="SaveInformations/CurrentSave/HBoxContainer" index="0"]
margin_top = 5.0
margin_right = 203.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "Current Save name : "
valign = 1
uppercase = true

[node name="SaveNameField" type="LineEdit" parent="SaveInformations/CurrentSave/HBoxContainer" index="1"]
margin_left = 207.0
margin_right = 457.0
margin_bottom = 29.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 6 )
align = 1
max_length = 32
expand_to_text_length = true
context_menu_enabled = false
clear_button_enabled = true
placeholder_text = "SAVE NAME"
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="c_savetime" type="Label" parent="SaveInformations/CurrentSave" index="1"]
margin_top = 33.0
margin_right = 457.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "Current Save Time : "
valign = 1
uppercase = true

[node name="TargetSave" type="VBoxContainer" parent="SaveInformations" index="1"]
margin_left = 608.0
margin_top = 11.0
margin_right = 800.0
margin_bottom = 53.0
size_flags_vertical = 4
alignment = 2

[node name="t_savename" type="Label" parent="SaveInformations/TargetSave" index="0"]
margin_right = 192.0
margin_bottom = 19.0
size_flags_horizontal = 0
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
text = "Target Save name : "
valign = 1
uppercase = true

[node name="t_savetime" type="Label" parent="SaveInformations/TargetSave" index="1"]
margin_top = 23.0
margin_right = 192.0
margin_bottom = 42.0
size_flags_horizontal = 0
size_flags_vertical = 1
custom_fonts/font = SubResource( 5 )
text = "Target Save Time : "
valign = 1
uppercase = true
